--- a/src/TypeScript.Objects.Tests/TypeScript.Objects.Tests.csproj
+++ b/src/TypeScript.Objects.Tests/TypeScript.Objects.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -9,14 +9,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
-    <PackageReference Include="MSTest.TestAdapter" Version="1.3.2" />
-    <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
+    <PackageReference Include="MSTest.TestAdapter" Version="3.8.2" />
+    <PackageReference Include="MSTest.TestFramework" Version="3.8.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\TypeScript.Objects\TypeScript.Objects.csproj" />
-    <ProjectReference Include="..\TypeScript.Object\TypeScript.Objects.csproj" />
   </ItemGroup>
 
 </Project>
