--- a/src/TypeScript.AstBuilder/package.json
+++ b/src/TypeScript.AstBuilder/package.json
@@ -9,7 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc --build ",
     "clean": "tsc --build --clean",
-    "bundle": "browserify --node --ignore-missing lib.js | terser > _lib.js"
+    "bundle": "browserify --node --ignore-missing TsAstBuilder.js | terser > _lib.js"
   },
   "keywords": [],
   "author": "robin-han",
